--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "DCAM Classes",
-  "short_name": "DCAM Classes",
-  "description": "Your partner in acing your exams.",
+  "name": "JEE Prep Ace",
+  "short_name": "JEE Prep Ace",
+  "description": "Your partner in acing the IIT JEE exam.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#3B82F6",
+  "background_color": "#E6E6FA",
+  "theme_color": "#4B0082",
   "icons": [
     {
-      "src": "icons/icon-192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
