--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-image-crop": "^11.0.5",
     "react-pdf": "^9.1.0",
     "recharts": "^2.15.1",
+    "stripe": "^16.2.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5",
