--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@stripe/react-stripe-js": "^3.0.0",
-    "@stripe/stripe-js": "^4.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -51,6 +49,7 @@
     "next-themes": "^0.4.0",
     "patch-package": "^8.0.0",
     "pdfjs-dist": "^4.0.379",
+    "razorpay": "^2.9.4",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.3",
     "react-dom": "^19.2.1",
@@ -58,7 +57,6 @@
     "react-image-crop": "^11.0.5",
     "react-pdf": "^9.1.0",
     "recharts": "^2.15.1",
-    "stripe": "^16.2.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5",
